Update 5. Longest Palindromic Substring.md

--- a/Description + code/5. Longest Palindromic Substring.md
+++ b/Description + code/5. Longest Palindromic Substring.md
@@ -1,4 +1,4 @@
-## 题目地址：[5. Longest Palindromic Substring](https://leetcode.com/problems/longest-palindromic-substring/)
+## 题目地址：[Longest Palindromic Substring](https://leetcode.com/problems/longest-palindromic-substring/)
 --- 
 ## 题目简介：
 输出字符串的最长回文串。
