--- a/Description + code/15. 3Sum.md
+++ b/Description + code/15. 3Sum.md
@@ -14,7 +14,8 @@
 > ]   
 
 ---
-## 题目解析：题目解析：首先想到暴力，但是会超时。于是可以仅考虑一个数字（nums[i]）的右侧数字，并根据以下规则滑动：  
+## 题目解析：题目解析：首先想到暴力，但是会超时。   
+于是可以仅考虑一个数字（nums[i]）的右侧数字，并根据以下规则滑动：  
 + 先对数组排序，从左往右滑动。假设紧挨a[i]右边的为a[l]（从左边开始遍历的开头），开始为最右边的为a[r];    
 + 如果这三个数相加的和大于0，那么应该减小结果，则应该让a[r]向左滑动；  
 + 如果这三个数相加的和小于0，那么应该增大结果，则应该让a[l]向右滑动；  
