Update 4. Median of Two Sorted Arrays.md

--- a/Description + code/4. Median of Two Sorted Arrays.md
+++ b/Description + code/4. Median of Two Sorted Arrays.md
@@ -1,4 +1,4 @@
-## 题目地址：[4. Median of Two Sorted Arrays](https://leetcode.com/problems/longest-substring-without-repeating-characters/)
+## 题目地址：[Median of Two Sorted Arrays](https://leetcode.com/problems/longest-substring-without-repeating-characters/)
 --- 
 ## 题目简介：
 给定两个数组，求这两个数组中所有数字的中位数。两个数组不同时为空，并且需要算法的时间为O(log(m+n))。
