Update 1. Two Sum.md

--- a/Description + code/1. Two Sum.md
+++ b/Description + code/1. Two Sum.md
@@ -14,7 +14,7 @@
 ## 题目解析：暴力吧. 
 >Python版1：
 
-```
+```python
 class Solution(object):
     def twoSum(self, nums, target):
         """
@@ -33,7 +33,7 @@ class Solution(object):
 ```
 >Python版2：
 
-```
+```python
 class Solution:
     def twoSum(self, nums: List[int], target: int) -> List[int]:
         if nums is None:
