Update 7. Reverse Integer.md

--- a/Description + code/7. Reverse Integer.md
+++ b/Description + code/7. Reverse Integer.md
@@ -24,7 +24,7 @@
 
 > C++版：
 
-```
+```c++
 class Solution {
 public:
     int reverse(int x) {
@@ -68,7 +68,7 @@ public:
 ```
 >Python版：
 
-```
+```python
 class Solution:
     def reverse(self, x: int) -> int:
         positive = 2147483647
