--- a/Description + code/2. Add Two Numbers.md
+++ b/Description + code/2. Add Two Numbers.md
@@ -13,7 +13,7 @@
 ## 题目解析：基础数学和链表的知识，注意区别"->"和"."的区别。  
 >c++版：
 
-```
+```c++
 class Solution {
 public:  
     ListNode* addTwoNumbers(ListNode* l1, ListNode* l2) {  
@@ -45,7 +45,7 @@ public:
 ```
 >Python版：
 
-```
+```python
 # Definition for singly-linked list.
 # class ListNode:
 #     def __init__(self, x):
