Update 5. Longest Palindromic Substring.md

--- a/Description + code/5. Longest Palindromic Substring.md
+++ b/Description + code/5. Longest Palindromic Substring.md
@@ -21,7 +21,7 @@
 
 > C++版：
 
-```
+```c++
 class Solution {
 public:
     string longestPalindrome(string s) {
@@ -60,7 +60,7 @@ public:
         return s.substr(start,ans);
     }
 };
-```
+```python
 >Python版：
 
 ```
