Update 4. Median of Two Sorted Arrays.md

--- a/Description + code/4. Median of Two Sorted Arrays.md
+++ b/Description + code/4. Median of Two Sorted Arrays.md
@@ -21,7 +21,7 @@
 #### 1、题目分析：合并、排序、找中间，但是时间复杂度超过需求。
 > C++版：
 
-```
+```c++
 class Solution {
 public:
     double findMedianSortedArrays(vector<int>& nums1, vector<int>& nums2) {
@@ -41,7 +41,7 @@ public:
 ```
 >Python版：
 
-```
+```python
 class Solution:
     def findMedianSortedArrays(self, nums1: List[int], nums2: List[int]) -> float:
         nums2.extend(nums1);
@@ -57,7 +57,7 @@ class Solution:
 ---
 #### 2、递归方法：在两个已排列的数组中找出中位数。时间复杂度为O（log(min(N,M))    
 > C++版:
-```
+```c++
 class Solution {
 public:
     double findMedianSortedArrays(vector<int>& nums1, vector<int>& nums2) {
@@ -107,7 +107,7 @@ public:
 };
 ```
 > Python版：
-```
+```python
 class Solution:
     def findMedianSortedArrays(self, nums1: List[int], nums2: List[int]) -> float:
         MIN_VALUE = -0x7fffffff
