--- a/Description + code/3. Longest Substring Without Repeating Characters.md
+++ b/Description + code/3. Longest Substring Without Repeating Characters.md
@@ -25,7 +25,7 @@
 字符串中对应的ASCII码中的256个字符，为了方便记下这256个字符可能出现的位置，所以可以用一个数据结构存储他们的位置。
 >Python版1：
 
-```
+```python
 class Solution(object):
     def twoSum(self, nums, target):
         """
@@ -44,7 +44,7 @@ class Solution(object):
 ```
 >Python版2：
 
-```
+```python
 class Solution:
     def twoSum(self, nums: List[int], target: int) -> List[int]:
         if nums is None:
