--- a/Description + code/15. 3Sum.md
+++ b/Description + code/15. 3Sum.md
@@ -23,7 +23,7 @@
 
 
 > C++
-```
+```c++
 class Solution {
 public:
     vector<vector<int>> threeSum(vector<int>& nums) {
@@ -59,7 +59,7 @@ public:
 ```
 > Python版：
 
-```
+```python
 class Solution:
     def threeSum(self, nums: List[int]) -> List[List[int]]:
         ans_list = []
@@ -92,7 +92,7 @@ class Solution:
 ```
 
 > Java: 
-```
+```java
 class Solution {
     public List<List<Integer>> threeSum(int[] nums) {
         List<List<Integer>> ans_set = new ArrayList<List<Integer>>(); 
