Update 12. Integer to Roman.md

--- a/Description + code/12. Integer to Roman.md
+++ b/Description + code/12. Integer to Roman.md
@@ -17,7 +17,7 @@
 题目分析：假如整数能够减去一个数，那么除以这个数必然大于等于1，那么剩下的就剩下暴力了。  
    
 > C++：
-```
+```c++
 class Solution {
 public:
     string intToRoman(int num) {
@@ -101,7 +101,7 @@ public:
 };
 ```
 >Java版：
-```
+```java
 class Solution {
     public String intToRoman(int num) {
         String ans = "";
@@ -180,7 +180,7 @@ class Solution {
 
 > python
 
-```
+```python
 class Solution:
     def intToRoman(self, num: int) -> str:
         ans = ""
