Update 10. Regular Expression Matching.md

--- a/Description + code/10. Regular Expression Matching.md
+++ b/Description + code/10. Regular Expression Matching.md
@@ -54,7 +54,7 @@
 > + 如果p的第二个字符为‘*’，第一个字符却与s的第一个字符不匹配，那么这里可以直接跳过p的前两个字符。  
 
 > Python代码：（这里同样试了C++的两种方法，时间和空间差不多，在代码中已经注释：
-```
+```python
 class Solution:
     def isMatch(self, s: str, p: str) -> bool:
         if (len(p) == 0):
@@ -77,7 +77,7 @@ class Solution:
 ```
 
 C++代码1：（这个代码时间效率较为复杂）
-```
+```c++
 class Solution {
 public:
     bool isMatch(string s, string p) {
@@ -111,7 +111,7 @@ public:
 
 > C++代码2：快速一点
 
-```
+```c++
 class Solution {
 public:
     bool isMatch(string s, string p) {
@@ -148,7 +148,7 @@ public:
   
 假如不管时间的话，还可以将代码进行简化如下（这个代码可以很好的说明这个题的思路）：  
 C++版：
-```
+```c++
 class Solution {
 public:
     bool isMatch(string s, string p) {
@@ -176,7 +176,7 @@ public:
 + dp[i][j] = dp[i - 1][j] && (s[i - 1] == p[j - 2] || p[j - 2] == '.'), if p[j - 1] == '*' ，例如s="asddd"与p="asd*"中的“d*”;  
   
 > C++向量版（时间和空间就是厉害）：
-```
+```c++
 class Solution {
 public:
     bool isMatch(string s, string p) {
@@ -197,7 +197,7 @@ public:
 };
 ```
 > C++数组版（照猫画虎，时间更快，空间更小）：
-```
+```c++
 class Solution {
 public:
     bool isMatch(string s, string p) {
@@ -219,7 +219,7 @@ public:
 };
 ```
 > Python版:
-```
+```python
 class Solution:
     def isMatch(self, s: str, p: str) -> bool:
         m = len(s)
