Update 28. Implement strStr().md

--- a/Description + code/28. Implement strStr().md
+++ b/Description + code/28. Implement strStr().md
@@ -16,8 +16,7 @@
 ## 题目解析：  
 使用函数自带函数。
 >C++：
-
-```
+```c++
 class Solution {
 public:
     int strStr(string haystack, string needle) {
@@ -26,7 +25,7 @@ public:
 };
 ```
 >Python版：
-```
+```python
 class Solution:
     def strStr(self, haystack: str, needle: str) -> int:
         return haystack.find(needle)
