Update 27. Remove Element.md

--- a/Description + code/27. Remove Element.md
+++ b/Description + code/27. Remove Element.md
@@ -19,7 +19,7 @@ It doesn't matter what values are set beyond the returned length.
 ## 题目解析： 
 #### 简单题选择暴力：遍历一遍如果存在该数值便删除。  
 > C++:
-```
+```c++
 class Solution {
 public:
     int removeElement(vector<int>& nums, int val) {
@@ -39,7 +39,7 @@ public:
 
 
 > Python版:
-```
+```python
 class Solution:
     def removeElement(self, nums: List[int], val: int) -> int:
         i = 0
