--- a/Description + code/20. Valid Parentheses.md
+++ b/Description + code/20. Valid Parentheses.md
@@ -29,7 +29,7 @@
 ## 题目解析：比较经典的栈的使用。   
 > C++：
 
-```
+```c++
 class Solution {
 public:
     bool isValid(string s) {
@@ -64,7 +64,7 @@ public:
 ```
 > Python：
 
-```
+```python
 class Solution:
     def isValid(self, s: str) -> bool:
         if (len(s) % 2):
