Update 48. Rotate Image.md

--- a/Description + code/48. Rotate Image.md
+++ b/Description + code/48. Rotate Image.md
@@ -41,7 +41,7 @@
 假设用(x,y)表示坐标，可知道相邻的两个坐标中，前面的x作为后面的y用，后面的x为2减去前面的y，这里的2就是每个向量的最大下标。  
 > C++版：
 
-```
+```c++
 class Solution {
 public:
     void rotate(vector<vector<int>>& matrix) {
@@ -61,7 +61,7 @@ public:
 ```
 >Python版：
 
-```
+```python
 class Solution:
     def rotate(self, matrix: List[List[int]]) -> None:
         """
