Update 40. Combination Sum II.md

--- a/Description + code/40. Combination Sum II.md
+++ b/Description + code/40. Combination Sum II.md
@@ -30,7 +30,7 @@
 先不管结果是否已经出现过，直接先放进结果集合中，在最后的时候进行去重。  
 
 > C++：
-```
+```c++
 class Solution {
 public:
     vector<vector<int>> ans;
@@ -78,7 +78,7 @@ public:
 ```
 
 > Python：
-```
+```python
 class Solution:
     def combinationSum2(self, candidates: List[int], target: int) -> List[List[int]]:
         ans = []
@@ -111,7 +111,7 @@ class Solution:
 在每次找到合适的集合时，要查看结果数据集中是否已经出现过了，如果没有再放进去，这个方法相对更加的省时省空间。   
 
 > C++：
-```
+```c++
 class Solution {
 public:
     vector<vector<int>> ans;
