Update 39. Combination Sum.md

--- a/Description + code/39. Combination Sum.md
+++ b/Description + code/39. Combination Sum.md
@@ -29,7 +29,7 @@
 图中蓝色，代表此路径实现了加和,红色代表超过。那么可以进行深搜，只要加和达到目标便放入结果。  
 
 > C++：
-```
+```c++
 class Solution {
 public:
     vector<vector<int>> ans;
@@ -65,7 +65,7 @@ public:
 ```
 
 > Python：
-```
+```python
 class Solution:        
     def combinationSum(self, candidates: List[int], target: int) -> List[List[int]]:
         ans = []
