--- a/Description + code/84. Largest Rectangle in Histogram.md
+++ b/Description + code/84. Largest Rectangle in Histogram.md
@@ -15,7 +15,7 @@
 例如上面的例子序号分别为[0, 1, 2, 3, 4, 5]，可以有[0,1]，[0,2]，[0,3]...，[4,5]这些区间，刚开始最小的就是单个柱体的高度。碰到挨着最大的组合便更新，好像有不用暴力的方法，但是要去打球了，先贴C++暴力代码吧。
 
 > C++：
-```
+```c++
 class Solution {
 public:
     int largestRectangleArea(vector<int>& heights) {
@@ -46,7 +46,7 @@ public:
 ```
 >Python暴力超时：
 
-```
+```python
 class Solution:
     def largestRectangleArea(self, heights: List[int]) -> int:
         if len(heights) == 0:
@@ -72,7 +72,7 @@ class Solution:
 考虑一下使用的原因：例如上面的例子，2之后为1，这时是递减的，与和Container With Most Water类似，需要考虑长度优先还是宽度优先的问题。因为这个题中最短才是制约面积的关键因素，所以只要下降，就得看他对之前的影响。
 
 Python（大佬的）：
-```
+```python
 class Solution:
     def largestRectangleArea(self, heights: List[int]) -> int:
         stack = []
