Update 76. Minimum Window Substring.md

--- a/Description + code/76. Minimum Window Substring.md
+++ b/Description + code/76. Minimum Window Substring.md
@@ -16,7 +16,7 @@
 这里使用滑动窗口，即从左边先找到第一个字符串包含了所有的字符的子字符串，然后依次抛弃这个子字符串的左侧字符，并在右侧找到对应的字符。例如，例子中首先找到"ADOBEC"满足条件，然后抛弃'A'，组成“BECODEBA”。再抛弃'B'，只要找到'C'即可，因为后面的字符串有'B'。依次下去，找到结果。
 
 > C++
-```
+```c++
 class Solution {
 public:
     string minWindow(string s, string t) {
@@ -51,7 +51,7 @@ public:
 ```
 >Python版：
 
-```
+```python
 class Solution:
     def minWindow(self, s: str, t: str) -> str:
         if s == "":
