Update 72. Edit Distance.md

--- a/Description + code/72. Edit Distance.md
+++ b/Description + code/72. Edit Distance.md
@@ -40,7 +40,7 @@
 
 >C++：
 
-```
+```c++
 class Solution {
 public:
     int minDistance(string word1, string word2) {
@@ -66,7 +66,7 @@ public:
 
 > C++：
 
-```
+```c++
 class Solution {
 public:
     int minDistance(string word1, string word2) {
@@ -97,7 +97,7 @@ public:
 };
 ```
 > Python:
-```
+```python
 class Solution:
     def minDistance(self, word1: str, word2: str) -> int:
         if word1 == word2:
