Update 70. Climbing Stairs.md

--- a/Description + code/70. Climbing Stairs.md
+++ b/Description + code/70. Climbing Stairs.md
@@ -27,7 +27,7 @@
 假设想要跳到第n（n>2）个台阶，可以从第n-1个和n-2个台阶跳过去，所以当前n的方案有n-1台阶到n-2台阶的综合的个数。   
 
 > C++：
-```
+```c++
 class Solution {
 public:
     int climbStairs(int n) {
@@ -44,7 +44,7 @@ public:
 ```
 > Python：
 
-```
+```python
 class Solution:
     def climbStairs(self, n: int) -> int:
         dp = [0 for i in range(n + 1)]
@@ -59,7 +59,7 @@ class Solution:
 从上面可以看到，对于每个楼梯，真正起作用的只有前面两个层，所以可以只用两个变量来存储状态即可。
 
 > C++版:
-```
+```c++
 class Solution {
 public:
     int climbStairs(int n) {
@@ -78,7 +78,7 @@ public:
 ```
 
 > Python：
-```
+```python
 class Solution:
     def climbStairs(self, n: int) -> int:
         if n <= 2:
@@ -95,7 +95,7 @@ class Solution:
 #### 3、递归  
 最简单的递归会超时：  
 > C++:
-```
+```c++
 class Solution {
 public:
     int climbStairs(int n) {
