Update 111. Minimum Depth of Binary Tree.md

--- a/Description + code/111. Minimum Depth of Binary Tree.md
+++ b/Description + code/111. Minimum Depth of Binary Tree.md
@@ -24,7 +24,7 @@
 + 若左右子结点都存在，则分别对左右子结点进行递归，将二者中的较小值加1返回。  
 
 >C++版：
-```
+```c++
 class Solution {
 public:
     int minDepth(TreeNode* root) {
@@ -40,7 +40,7 @@ public:
 ```
 >Python版：
 
-```
+```python
 class Solution:
     def minDepth(self, root: TreeNode) -> int:
         if not root:
@@ -56,7 +56,7 @@ class Solution:
 #### 2、BFS  
 广度搜索，只要该点的左子节点和右子节点都为空，说明到了最后，此时直接返回层数。  
 > C++:
-```
+```c++
 class Solution {
 public:
     int minDepth(TreeNode* root) {
@@ -86,7 +86,7 @@ public:
 };
 ```
 > Python：
-```
+```python
 class Solution:
     def minDepth(self, root: TreeNode) -> int:
         if not root:
