Update 110. Balanced Binary Tree.md

--- a/Description + code/110. Balanced Binary Tree.md
+++ b/Description + code/110. Balanced Binary Tree.md
@@ -32,7 +32,7 @@
 二叉树的深度问题，简单问题。每到一个点判断一下该点是否满足条件。  
 > C++：
 
-```
+```c++
 class Solution {
 public:
     bool isBalanced(TreeNode* root) {
@@ -51,7 +51,7 @@ public:
 ```
 > Python版：
 
-```
+```python
 class Solution:
     def isBalanced(self, root: TreeNode) -> bool:
         if root == None:
@@ -72,7 +72,7 @@ class Solution:
 终止的条件是什么呢？根据题目，只要出现左右两端的点不符合层数差别为1，那么便返回错误结果。假设最下面一层的编号为0，每往上走一层加1，那么每层的深度将大于等于0。将不符合条件的节点的深度赋值为-1，就能表示出有错误。  
 
 > python:
-```
+```python
 class Solution(object):
     def isBalanced(self, root):
         height = self.get_height(root)
