Update 108. Convert Sorted Array to Binary Search Tree.md

--- a/Description + code/108. Convert Sorted Array to Binary Search Tree.md
+++ b/Description + code/108. Convert Sorted Array to Binary Search Tree.md
@@ -18,7 +18,7 @@
 DFS:构建二叉树最简单的方法便是递归，这里中间位置的选择将决定了左右节点是否为空。
 >C++：
 
-```
+```c++
 /**
  * Definition for a binary tree node.
  * struct TreeNode {
@@ -52,7 +52,7 @@ public:
 ```
 >Python版：
 
-```
+```python
 # Definition for a binary tree node.
 # class TreeNode:
 #     def __init__(self, x):
