Update 104. Maximum Depth of Binary Tree.md

--- a/Description + code/104. Maximum Depth of Binary Tree.md
+++ b/Description + code/104. Maximum Depth of Binary Tree.md
@@ -22,7 +22,7 @@
 只要当前节点不为空，便独挡一层，左节点和右节点的层数的最大值加1便是最后的结果。
 
 > C++：
-```
+```c++
 class Solution {
 public:
     int maxDepth(TreeNode* root) {
@@ -40,7 +40,7 @@ public:
 };
 ```
 > Python
-```
+```python
 class Solution:
     def maxDepth(self, root: TreeNode) -> int:
         if root == None:
@@ -56,7 +56,7 @@ class Solution:
 2、逐层遍历
 
 > C++：
-```
+```c++
 class Solution {
 public:
     int maxDepth(TreeNode* root) {
@@ -85,7 +85,7 @@ public:
 ```
 
 > python
-```
+```python
 class Solution:
     def maxDepth(self, root: TreeNode) -> int:
         if root == None:
