Update 101. Symmetric Tree.md

--- a/Description + code/101. Symmetric Tree.md
+++ b/Description + code/101. Symmetric Tree.md
@@ -21,7 +21,7 @@
 在进行对比时，有两种直接的想法。一种是一行行的进行对比，另一种就是从外向内，逐个对应位置的进行分析。深度搜索便是上面的从外往内，如例1所示可以先一次验证外面的[1, 2, 3]，然后对比[4]。
 
 > C++：
-```
+```c++
 class Solution {
 public:
     bool isSymmetric(TreeNode* root) {
@@ -41,7 +41,7 @@ public:
 ```
 >Python版：
 
-```
+```python
 class Solution:
     def isSymmetric(self, root: TreeNode) -> bool:
         if root== None:
