Update 162. Find Peak Element.md

--- a/Description + code/162. Find Peak Element.md
+++ b/Description + code/162. Find Peak Element.md
@@ -22,7 +22,7 @@
 要求了算法的时间复杂度，考虑二分。每次都只查看中间位置的数字是否满足要求，动态的更新区间，这里使用队列保存区间的范围。
 
 >C++版：
-```
+```c++
 class Solution {
 public:
     int findPeakElement(vector<int>& nums) {
@@ -60,7 +60,7 @@ public:
 
 >Python版：
 
-```
+```python
 class Solution:
     def findPeakElement(self, nums: List[int]) -> int:
         if len(nums) == 1 or nums[1] < nums[0]:
