Update 153. Find Minimum in Rotated Sorted Array.md

--- a/Description + code/153. Find Minimum in Rotated Sorted Array.md
+++ b/Description + code/153. Find Minimum in Rotated Sorted Array.md
@@ -15,7 +15,7 @@
 #### 1、简单法：  
 只要出现前一个大于后一个，那么后一个便是最小值。  
 C++：  
-```
+```c++
 class Solution {
 public:
     int findMin(vector<int>& nums) {
@@ -29,7 +29,7 @@ public:
 };
 ```
 python:
-```
+```python
 class Solution:
     def findMin(self, nums: List[int]) -> int:
         for i in range(len(nums) - 1):
@@ -42,7 +42,7 @@ class Solution:
 
 > C++：
 
-```
+```c++
 class Solution {
 public:
     int findMin(vector<int>& nums) {
@@ -66,7 +66,7 @@ public:
 };
 ```
 > python
-```
+```python
 class Solution:
     def findMin(self, nums: List[int]) -> int:
         start = 0
