Update 216. Combination Sum3.md

--- a/Description + code/216. Combination Sum3.md
+++ b/Description + code/216. Combination Sum3.md
@@ -18,7 +18,7 @@
 接39和40的两道题目，这道题固定了数字，和固定长度。那么便可以初始化candidates为1-9的数字，并且在最终放进结果集的时候检查一下是否满足长度即可。  
 >C++版：
 
-```
+```c++
 class Solution {
 public:
     vector<vector<int>> ans;
@@ -49,7 +49,7 @@ public:
 ```
 >Python版：
 
-```
+```python
 class Solution:
     def combinationSum3(self, k: int, n: int) -> List[List[int]]:
         ans = []
@@ -69,7 +69,7 @@ class Solution:
         return ans
 ```
 > Java版：
-```
+```java
 class Solution {
     List<List<Integer>> ans = new ArrayList<>();
     public List<List<Integer>> combinationSum3(int k, int n) {
