Update 213. House Robber II.md

--- a/Description + code/213. House Robber II.md
+++ b/Description + code/213. House Robber II.md
@@ -18,7 +18,7 @@
 与198题不同的是，这里多了一个首尾相连的限制。首尾相连意味着，选了第一个就不能选最后一个。那么就把这两个有问题的分开，一人一个队伍（除了敌对方），看谁最牛批，最后选个牛批的就行了。
 >C++版：
 
-```
+```c++
 class Solution {
 public:
     int rob(vector<int>& nums) {
@@ -42,7 +42,7 @@ public:
 ```
 >Python版：
 
-```
+```python
 class Solution:
     def rob(self, nums: List[int]) -> int:
         if len(nums) == 0:
