Update 211. Add and Search Word - Data structure design.md

--- a/Description + code/211. Add and Search Word - Data structure design.md
+++ b/Description + code/211. Add and Search Word - Data structure design.md
@@ -22,7 +22,7 @@
 
 > C++ 
 
-```
+```c++
 class TrieNode {
 public:
     vector<TrieNode*> child;
@@ -87,7 +87,7 @@ private:
 ```
 
 > Python：
-```
+```python
 class Node(object):
     def __init__(self):
         self.children = collections.defaultdict(Node)
