Update 210. Course Schedule II.md

--- a/Description + code/210. Course Schedule II.md
+++ b/Description + code/210. Course Schedule II.md
@@ -22,8 +22,8 @@
 ## 题目解析：  
 此题在于构建有向无环图，并且对于建立起来的图实现遍历。结合207题，只要将能上的课程纪录下来即可。如果不能够完全安排，将此纪录清空即可。
 
->C++版1：
-```
+>C++版：
+```c++
 class Solution {
 public:
     vector<int> findOrder(int numCourses, vector<vector<int>>& prerequisites) {
@@ -67,7 +67,7 @@ public:
 ```
 >Python版：
 
-```
+```python
 class Solution:
     def findOrder(self, numCourses: int, prerequisites: List[List[int]]) -> List[int]:
         relation = collections.defaultdict(list)
