--- a/Description + code/209. Minimum Size Subarray Sum.md
+++ b/Description + code/209. Minimum Size Subarray Sum.md
@@ -9,8 +9,8 @@
 ---
 ## 题目解析：  
 #### 1、递归思路，但是内存错误（Memory Limit Exceeded）：
-
-```
+> python
+```python
 class Solution:
     def minSubArrayLen(self, s: int, nums: List[int]) -> int:
         if len(nums) == 0:
@@ -32,7 +32,7 @@ class Solution:
 
 > C++：
 
-```
+```c++
 class Solution {
 public:
     int minSubArrayLen(int s, vector<int>& nums) {
@@ -66,7 +66,7 @@ public:
 使用双指针，先移动右指针，找到合适的区间。然后逐渐缩小左指针，确定一个最小的区间。如此当左指针和右指针都达到最右端时，遍历完成。时间复杂度O（2n）。
 
 > C++
-```
+```c++
 class Solution {
 public:
     int minSubArrayLen(int s, vector<int>& nums) {
@@ -94,7 +94,7 @@ public:
 ```
 
 > Python
-```
+```python
 class Solution:
     def minSubArrayLen(self, s: int, nums: List[int]) -> int:
         if len(nums) == 0:
@@ -119,7 +119,7 @@ class Solution:
 ```
 4、[二分转载地址](https://www.cnblogs.com/grandyang/p/4501934.html)
 > C++
-```
+```c++
 class Solution {
 public:
     int minSubArrayLen(int s, vector<int>& nums) {
