Update 208. Implement Trie (Prefix Tree).md

--- a/Description + code/208. Implement Trie (Prefix Tree).md
+++ b/Description + code/208. Implement Trie (Prefix Tree).md
@@ -18,7 +18,7 @@
 
 > C++
 
-```
+```c++
 class TrieNode {
 public:
     vector<TrieNode*> child;
@@ -88,7 +88,7 @@ private:
 
 > Python
 
- ```
+ ```python
  class Node(object):
     def __init__(self):
         self.children = collections.defaultdict(Node)
