Update 207. Course Schedule.md

--- a/Description + code/207. Course Schedule.md
+++ b/Description + code/207. Course Schedule.md
@@ -37,7 +37,7 @@
 ![Pic](https://gss3.bdstatic.com/-Po3dSag_xI4khGkpoWK1HF6hhy/baike/s%3D220/sign=2d60fa290133874498c5287e610fd937/adaf2edda3cc7cd9565490a03401213fb80e914a.jpg)
 
 >C++版：
-```
+```c++
 class Solution {
 public:
     bool canFinish(int numCourses, vector<vector<int>>& prerequisites) {
@@ -76,7 +76,7 @@ public:
 ```
 >Python版：
 
-```
+```python
 class Solution:
     def canFinish(self, numCourses: int, prerequisites: List[List[int]]) -> bool:
         relation = collections.defaultdict(list)
