Update 201. Bitwise AND of Numbers Range.md

--- a/Description + code/201. Bitwise AND of Numbers Range.md
+++ b/Description + code/201. Bitwise AND of Numbers Range.md
@@ -26,7 +26,7 @@
 
 > C++版：
 
-```
+```c++
 class Solution {
 public:
     int rangeBitwiseAnd(int m, int n) {
@@ -50,7 +50,7 @@ public:
 ```
 >Python版：
 
-```
+```python
 class Solution:
     def rangeBitwiseAnd(self, m: int, n: int) -> int:
         if m == n:
