Update 200. Number of Islands.md

--- a/Description + code/200. Number of Islands.md
+++ b/Description + code/200. Number of Islands.md
@@ -25,7 +25,7 @@
 每第一次碰到'1'，向四周发散把所有的相邻的'1'找到，一个都不留。  
 
 > C++（利用queue）
-```
+```c++
 class Solution {
 public:
     int numIslands(vector<vector<char>>& grid) {
@@ -79,7 +79,7 @@ public:
 ```
 >Python版：
 
-```
+```python
 class Solution:
     def numIslands(self, grid: List[List[str]]) -> int:
         if len(grid) == 0:
@@ -121,7 +121,7 @@ class Solution:
 每次碰到第一次的'1'，就先朝一个方向把'1'找完，一个都不剩。  
 
 > C++：
-```
+```c++
 class Solution {
 public:
     int numIslands(vector<vector<char>>& grid) {
@@ -154,7 +154,7 @@ public:
 ```
 
 > Python：
-```
+```python
 class Solution:
     def numIslands(self, grid: List[List[str]]) -> int:
         if len(grid) == 0:
