Update 220. Contains Duplicate III.md

--- a/Description + code/220. Contains Duplicate III.md
+++ b/Description + code/220. Contains Duplicate III.md
@@ -28,7 +28,7 @@
 根据上面的[推理](https://leetcode.com/problems/contains-duplicate-iii/discuss/61756/Python-OrderedDict)，恍然大悟，我得改毕业论文了，花了那么长时间走错路了。（开始复制代码...）
 >Python版：
 
-```
+```python
 class Solution:
     def containsNearbyAlmostDuplicate(self, nums: List[int], k: int, t: int) -> bool:
         if k < 1 or t < 0:
