Update 337. House Robber III.md

--- a/Description + code/337. House Robber III.md
+++ b/Description + code/337. House Robber III.md
@@ -36,8 +36,8 @@
 #### 1、超时的想法：
 
 因为不能偷两个直接相连的房子，那么在某层时。只需考虑下一层最大值和当前层和往下两层（如果存在的话）最大值之和，哪个大选哪个。超时代码如下：
-
-```
+C++:
+```c++
 class Solution {
 public:
     int rob(TreeNode* root) {
@@ -57,7 +57,7 @@ public:
 
 > C++：
 
-```
+```c++
 /**
  * Definition for a binary tree node.
  * struct TreeNode {
@@ -91,7 +91,7 @@ public:
 ```
 
 > Python
-```
+```python
 # Definition for a binary tree node.
 # class TreeNode:
 #     def __init__(self, x):
