Update 238. Product of Array Except Self.md

--- a/Description + code/238. Product of Array Except Self.md
+++ b/Description + code/238. Product of Array Except Self.md
@@ -20,7 +20,7 @@
 
 >C++版：
 
-```
+```c++
 class Solution {
 public:
     vector<int> productExceptSelf(vector<int>& nums) {
@@ -39,7 +39,7 @@ public:
 ```
 >Python版：
 
-```
+```python
 class Solution:
     def productExceptSelf(self, nums: List[int]) -> List[int]:
         ans = [1 for i in range(len(nums))]
