--- a/Description + code/236. Lowest Common Ancestor of a Binary Tree.md
+++ b/Description + code/236. Lowest Common Ancestor of a Binary Tree.md
@@ -25,7 +25,7 @@
 递归的情况，将上述两种情况都考虑即可。   
 >C++版：
 
-```
+```c++
 class Solution {
 public:
     TreeNode* lowestCommonAncestor(TreeNode* root, TreeNode* p, TreeNode* q) {
@@ -43,7 +43,7 @@ public:
 ```
 >Python版：
 
-```
+```python
 class Solution:
     def lowestCommonAncestor(self, root: 'TreeNode', p: 'TreeNode', q: 'TreeNode') -> 'TreeNode':
         if not root or root == p or root == q:
