Update 230. Kth Smallest Element in a BST.md

--- a/Description + code/230. Kth Smallest Element in a BST.md
+++ b/Description + code/230. Kth Smallest Element in a BST.md
@@ -30,7 +30,7 @@
 #### 1、简单法：BFS先将所有的元素拿出来，然后进行排序，时间效率和空间复杂度不是最优。  
 >C++版：
 
-```
+```c++
 class Solution {
 public:
     int kthSmallest(TreeNode* root, int k) {
@@ -65,7 +65,7 @@ public:
 ```
 >Python版：
 
-```
+```python
 class Solution:
     def kthSmallest(self, root: TreeNode, k: int) -> int:
         nodes, values = [], []
@@ -87,8 +87,8 @@ class Solution:
 #### 2、搜索二叉树的性质  
 
 因为搜索二叉树的顺序已经排好，所以只要按照顺序进行左序遍历，返回结果即可。  
-
-```
+> python
+```python
 class Solution:
     def kthSmallest(self, root: TreeNode, k: int) -> int:
         values = []
