Update 228. Summary Ranges.md

--- a/Description + code/228. Summary Ranges.md
+++ b/Description + code/228. Summary Ranges.md
@@ -20,7 +20,7 @@
 #### 记住每次起始位置，遍历一次，连续的数字自然成一个区间，连续的判断标准是nums[i] = nums[i - 1] + 1。当出现间断的时候，重新开始记起始位置。借助现有的数字与字符串的转换函数，完成上述任务。   
 >C++版：
 
-```
+```c++
 class Solution {
 public:
     vector<string> summaryRanges(vector<int>& nums) {
@@ -59,7 +59,7 @@ public:
 
 ```
 >  Python
-```
+```python
 class Solution:
     def summaryRanges(self, nums: List[int]) -> List[str]:
         if len(nums) == 0:
