Update 227. Basic Calculator II.md

--- a/Description + code/227. Basic Calculator II.md
+++ b/Description + code/227. Basic Calculator II.md
@@ -22,7 +22,7 @@
 #### 只要将乘除相关计算先计算和位数大于1的数字准确找出，其他问题就是简单的相加。用栈的思想，将需要计算加减的先存起来，减可看作加负数，于是将乘除变化成加减即可。  
 >C++版：
 
-```
+```c++
 class Solution {
 public:
     int calculate(string s) {
@@ -62,8 +62,8 @@ public:
 };
 
 ```
->  Python
-```
+>  Python:
+```python
 class Solution:
     def calculate(self, s: str) -> int:
         ans,num,n = 0, 0, len(s)
