Update 221. Maximal Square.md

--- a/Description + code/221. Maximal Square.md
+++ b/Description + code/221. Maximal Square.md
@@ -19,7 +19,7 @@
 
 >C++版：
 
-```
+```c++
 class Solution {
 public:
     int maximalSquare(vector<vector<char>>& matrix) {
@@ -72,7 +72,7 @@ public:
 
 ```
 >  Python
-```
+```python
 class Solution:
     def maximalSquare(self, matrix: List[List[str]]) -> int:
         if len(matrix) == 0 or len(matrix[0]) == 0:
@@ -131,7 +131,7 @@ class Solution:
 ![规律](https://private.codecogs.com/gif.latex?dp%5B%5Bi%5D%5Bj%5D%5D%20%3D%20min%28dp%5Bi%5D%5Bj%20-%201%5D%2C%20min%20%28dp%5Bi-%201%5D%5Bj%5D%2C%20dp%5Bi%20-%201%5D%5Bj%20-%201%5D%29%29%20&plus;%201)  
 
 > C++:
-```
+```c++
 class Solution {
 public:
     int maximalSquare(vector<vector<char>>& matrix) {
@@ -161,7 +161,7 @@ public:
 ```
 
 > Python:
-```
+```python
 class Solution:
     def maximalSquare(self, matrix: List[List[str]]) -> int:
         if len(matrix) == 0 or len(matrix[0]) == 0:
