Update 37. Sudoku Solver.md

--- a/Description + code/37. Sudoku Solver.md
+++ b/Description + code/37. Sudoku Solver.md
@@ -16,7 +16,7 @@
 ---
    
 ## 题目解析：     
-对于不会玩数独的人，只能挨个尝试。那么挨个尝试便需要随时判断该数独是否有效，于是延申到了前面的一道题目：Valid Sudoku.   
+对于不会玩数独的人，只能挨个尝试。那么挨个尝试便需要随时判断该数独是否有效，于是延申到了前面的一道题目：[Valid Sudoku.](https://github.com/IOEvan/leetcode/blob/master/Description%20%2B%20code/36.%20Valid%20Sudoku.md)   
 该题目的解法的思想就是深搜，按照1-9的顺序来存放数据，只要当前数据满足有效数独的条件，便可以继续往下放置。但是需要及时的回溯，以便于所有情况的遍历。    
 因为给出的数独是默认有效的，于是只要判断每一次加一个数字所在的行、列和九宫格是否有效即可。    
 >c++版：   
